tests/bugs/invalid-field-access/source.wolof.igbo.swa
oluasusu:igbo;

mbido() onuogugu {
  ka i: onuogugu = 10;
  deputa("%d", i.field);
  weghachi 0;
}

